# labtoolbox

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  ETHICAL_GUIDELINES.md  LICENSE.txt  LabToolbox.py  README.md  SECURITY.md  example.ipynb  pyproject.toml  setup.py
LabToolbox/: __init__.py  fit.py  linalg.py  numerical.py  stats.py  uncertainty.py  utils.py
altro/: IMPORTANTE.txt
altro/publish.workflow/Contents/: Info.plist  document.wflow
altro/test.workflow/Contents/: document.wflow
docs/: api.rst  conf.py  deprecated.rst  requirements.txt
docs/_build/html/: .buildinfo  api.html  deprecated.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  deprecated.doctree  environment.pickle  index.doctree
docs/_build/html/.doctrees/api/: fit.doctree  numerical.doctree  signals.doctree  special.doctree  stats.doctree  uncertainty.doctree  utils.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/labtoolbox/fit/: fit.html
docs/_build/html/_modules/labtoolbox/numerical/: numerical.html
docs/_build/html/_modules/labtoolbox/signals/: signals.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt
docs/_build/html/_sources/api/: fit.rst.txt  stats.rst.txt  uncertainty.rst.txt  utils.rst.txt
docs/_build/html/api/: fit.html  numerical.html  signals.html  special.html  stats.html  uncertainty.html  utils.html
docs/api/: fit.rst  numerical.rst  signals.rst  special.rst  uncertainty.rst
docs/deprecated/: functions.rst  modules.rst
docs/source/: Home.md  conf.py  fit.md  index.rst  signals.md  stats.md  uncertainty.md  utils.md
labtoolbox/: __init__.py  _helper.py  _uncertainty_class.py  fit.py  linalg.py  numerical.py  optics.py  signals.py  special.py  stats.py  uncertainty.py  utils.py
labtoolbox/fit/: __init__.py  fit.py
labtoolbox/numerical/: __init__.py  numerical.py
labtoolbox/signals/: __init__.py  signals.py
labtoolbox/special/: __init__.py  special.py
labtoolbox/stats/: __init__.py  stats.py
labtoolbox/uncertainty/: __init__.py  uncertainty.py
labtoolbox/utils/: __init__.py  _colormap.npy  colormap.py  utils.py
(+5 files in other folders)
