[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
labtoolbox = ["README.md", "LICENSE"]

[project]
name = "labtoolbox"
version = "3.0.0"
description = "A Python package for the analysis and processing of experimental data in scientific research."
authors = [
    { name = "Giuseppe Sorrentino", email = "sorrentinogiuse@icloud.com" }
]
readme = "README.md"
license = 'MIT'
license-files = ["LICENSE"]
requires-python = ">= 3.9.6"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

keywords = [
    "data analysis",
    "curve fitting",
    "uncertainty",
    "experimental physics",
    "signal processing",
    "statistics",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# Optional dependencies for Bayesian analysis
bayesian = [
    "emcee",
    "corner",
]

# Optional dependencies for units conversion
units = [
    "astropy",
]

# Optional dependencies for statistical models and tests
stats = [
    "statsmodels",
]

# Optional group to install all optional dependencies
all = [
    "emcee",
    "corner",
    "astropy",
    "statsmodels",
]

[project.urls]
Documentation = "https://github.com/giusesorrentino/labtoolbox/wiki"
Source = "https://github.com/giusesorrentino/labtoolbox"
Tracker = "https://github.com/giusesorrentino/labtoolbox/issues"
Changelog = "https://github.com/giusesorrentino/labtoolbox/releases"